# zhs

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  config.toml.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: design.md  homework_dev.md  linter.md  log.md  plan_sync_refactor.md  refactor.md  spec.md  task.md  test.md  tutorial.md
scripts/: check_init_video.py  check_progress.py  check_video_data.py  diagnose_api.py  migrate_cache.py  test_complete_video.py  test_course2.py  test_exam_api.py  test_fresh_video.py  test_full_video.py  test_login_qr.py  test_play_course.py  test_quick.py
src/zhs/: __init__.py  __main__.py  config.py  crypto.py  exceptions.py  logger.py  login.py  reporter.py  session.py
src/zhs/ai/: course.py  exam.py  exam_base.py  homework.py  models.py  ppt.py  video.py
src/zhs/api/: __init__.py  ai_analysis_api.py  encrypted_query.py  http_client.py  sso.py  zhidao_homework_api.py
src/zhs/cache/: __init__.py  ai_cache.py  base.py  zhidao_cache.py
src/zhs/cli/: __init__.py  bootstrap.py  course_type.py
src/zhs/cli/services/: __init__.py  exam_service.py  fetch_service.py  homework_service.py  play_service.py
src/zhs/hike/: course.py  models.py  video.py
src/zhs/llm/: base.py  factory.py  openai.py  prompts.py  zhidao.py
src/zhs/utils/: cookie.py  display.py  path.py
src/zhs/zhidao/: __init__.py  course.py  models.py  quiz.py  video.py
src/zhs/zhidao/homework/: __init__.py  analyzer.py  cache.py  models.py  scanner.py  worker.py
tests/: conftest.py  test_config.py  test_crypto.py  test_exceptions.py  test_logger.py  test_login.py  test_reporter.py  test_session.py
tests/ai/: conftest.py  test_course.py  test_course_additional.py  test_exam.py  test_exam_base.py  test_homework.py  test_homework_additional.py  test_models.py  test_ppt.py  test_video.py
tests/api/: test_ai_analysis_api.py  test_encrypted_query.py  test_http_client.py  test_sso.py  test_zhidao_homework_api.py
tests/cache/: test_ai_cache.py  test_base.py  test_zhidao_cache.py
tests/cli/: test_bootstrap.py  test_course_type.py  test_main.py
tests/cli/services/: __init__.py  test_exam_service.py  test_fetch_service.py  test_homework_service.py  test_play_service.py
tests/hike/: test_course.py  test_models.py  test_video.py
tests/integration/: __init__.py  conftest.py  test_ai_integration.py  test_cli_integration.py  test_llm_integration.py  test_login_integration.py  test_session_integration.py  test_zhidao_integration.py
tests/llm/: test_base.py  test_factory.py  test_openai.py  test_prompts.py  test_zhidao.py
tests/utils/: test_cookie.py  test_display.py  test_path.py
tests/zhidao/: conftest.py  test_course.py  test_models.py  test_quiz.py  test_video.py
tests/zhidao/homework/: test_ai_analysis_integration.py  test_analyzer.py  test_cache.py  test_cache_compat.py  test_models.py  test_scanner.py  test_worker.py
